--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./redes-sociais.png" type="png">
+    <link rel="stylesheet" href="./style.css">
     <title>Redes Sociais</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
         </section>
     </main>
     <footer>
-        <p>Dsenvolvido por Luiza Hillesheim</p>
+        <p>Desenvolvido por Luiza Hillesheim</p>
     </footer>
     
 </body>
