--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <footer>
         <p>Desenvolvido por Luiza Hillesheim</p>
     </footer>
+    <script type="module" src="./DadosGlobais.js"></script>
     
 </body>
 </html>
